Fix home layout issues

--- a/style.css
+++ b/style.css
@@ -162,21 +162,22 @@ h5 {
 
 /* home page */
 .home-about {
-  font-size: 1.6rem;
+  display: flex;
+  font-size: 1.4rem;
   line-height: 1.6;
-  margin: 1rem;
+  margin: auto;
+  padding: 1rem;
+  width: 55%;
   position: relative;
-  text-align: left;
-  width: 60%;
+  text-align: justify;
 }
 
 .home-about-img {
   box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
     0 5px 5px 5px rgba(223, 189, 105, 0.934), 0 2px 5px 10px rgba(0, 0, 0, 0.6);
   height: 30rem;
-  margin: 0.5rem 1rem;
+  margin: 0.5rem;
   position: relative;
-  width: auto;
 }
 
 .home-mid-left {
@@ -191,8 +192,8 @@ h5 {
   box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
     0 5px 5px 5px rgba(223, 189, 105, 0.934), 0 2px 5px 10px rgba(0, 0, 0, 0.6);
   color: #7d2600;
-  flex: 1 1 33rem;
-  margin: 1rem 0.5rem;
+  flex: 1 1 30rem;
+  margin: 0.5rem;
   position: relative;
 }
 
@@ -205,15 +206,15 @@ h5 {
 .home-article-img {
   box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
     0 5px 5px 5px rgba(223, 189, 105, 0.934), 0 2px 5px 10px rgba(0, 0, 0, 0.6);
-  width: 100%;
+  width: 80%;
 }
 
 .home-article-text {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.6;
   padding: 1rem 3rem;
   position: relative;
-  text-align: justify;
+  text-align: center;
 }
 
 .home-article-title {
@@ -256,14 +257,23 @@ h5 {
   position: relative;
 }
 
-.home-new-movie {
+.home-top-new-movie {
+  background-color: #bbb157;
+  box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
+    0 5px 5px 5px rgba(223, 189, 105, 0.934);
+  color: #7d2600;
   display: flex;
-  flex-wrap: wrap;
+  height: 300px;
   justify-content: center;
+  margin: 0;
+  position: relative;
+}
+
+.home-new-movie {
   background-color: #bbb157;
   box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
     0 5px 5px 5px rgba(223, 189, 105, 0.934), 0 2px 5px 10px rgba(0, 0, 0, 0.6);
-  margin: 1.5rem 0;
+  margin: 0.8rem 0 1.5rem 0;
   position: relative;
   width: auto;
 }
@@ -311,7 +321,7 @@ h5 {
   color: #7d2600;
   font-size: 1.3rem;
   font-weight: 600;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   padding: 1rem 0;
   width: 100%;
 }
@@ -334,7 +344,7 @@ h5 {
   background-color: #bbb157;
   box-shadow: 0 -5px 5px 5px rgba(223, 189, 105, 0.934),
     0 5px 5px 5px rgba(223, 189, 105, 0.934), 0 2px 5px 10px rgba(0, 0, 0, 0.6);
-  margin: 1rem 0.5rem;
+  margin: 0.5rem;
   position: relative;
   flex: 1 1 30rem;
 }
@@ -343,7 +353,7 @@ h5 {
   background-color: #bbb157;
   color: #7d2600;
   font-style: italic;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.6;
   padding-bottom: 2rem;
   position: relative;
@@ -389,16 +399,16 @@ h5 {
   color: #7d2600;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0.5rem;
   position: relative;
 }
 
 /* -- Video -- */
 .home-video-olga-wrap {
-  flex: 1 1 43rem;
+  flex: 1 1 30rem;
   height: auto;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem;
   position: relative;
 }
 
@@ -604,7 +614,7 @@ video {
   color: #7d2600;
   align-items: center;
   justify-content: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 600;
   height: 3rem;
   background-color: rgb(224, 201, 166);
@@ -1061,7 +1071,6 @@ form {
 
   .home-about-img {
     height: 30rem;
-    width: auto;
   }
 
   .home-red-img {
@@ -1137,22 +1146,22 @@ form {
   }
 
   .home-about {
-    font-size: 1rem;
-  }
-
-  .home-about-img {
-    height: 25rem;
-    width: auto;
+    font-size: 1.5rem;
+    width: 90%;
   }
 
   .home-article-text,
   .home-poem-text,
   .card-poem-text {
-    font-size: 1rem;
+    font-size: 1.3rem;
+  }
+
+  .home-article-img {
+    width: 100%;
   }
 
   .home-article-title {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 
   .home-top {
@@ -1179,12 +1188,12 @@ form {
   .navbar-links a:hover,
   .navbar-links a.active {
     color: #ffcc66;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     text-decoration: underline;
   }
 
   .poems-title {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 
   .toggle-btn {
@@ -1224,24 +1233,28 @@ form {
   }
 
   .home-about {
-    font-size: 1rem;
+    font-size: 1.5rem;
     line-height: 1.6;
-    width: 80%;
+    width: 90%;
   }
 
   .home-about-img {
     height: 25rem;
-    width: auto;
+    width: 100%;
   }
 
   .home-article-text,
   .home-poem-text,
   .card-poem-text {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
 
   .home-article-title {
     font-size: 1.1rem;
+  }
+
+  .home-article-img {
+    width: 100%;
   }
 
   .home-red-img {
